feat: add support for lit renderers to grid tester (#1776)
LitRenderers in Grids can contain properties and functions, but have no way for them to be inspected or invoked, respectively.

This enhancement provides methods for the GridTester to support this capability.

Fixes #1775